deployment/kubernetes/postgres-server.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
  labels:
    run: postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    service: postgres
spec:
  selector:
    run: postgres
  ports:
    - name: port1
      protocol: TCP
      port: 5432
      targetPort: 5432
  type: NodePort
